--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-mysql-session": "^1.3.0",
@@ -21,6 +22,8 @@
     "mysql": "^2.15.0",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "pdf-image": "^2.0.0",
     "pdf2img": "^0.5.0"
   }
